# solarsystem

./: CMakeLists.txt  Makefile  README.md  algebra.cpp  algebra.h  camera.cpp  camera.h  interface.cpp  interface.h  jupiter.mtl  loading.cpp  loading.h  main.cpp  nave.mtl  neptune.mtl  planet.cpp  planet.h  saturn.mtl  ship.cpp  ship.h  sky.cpp  sky.h  sky.mtl  sun.mtl  terra.mtl  texture.cpp  texture.h
objetos/: nave.mtl  sky.mtl
objetos/planetas/: saturn.mtl  terra.mtl  venus.mtl
objetos/planetas/saturn/: Saturn_Planet.tga  Saturn_Rings.tga
objetos/planets/: earth.mtl  jupiter.mtl  mars.mtl  mercury.mtl  moon.mtl  neptune.mtl  saturn.mtl  sun.mtl  uranus.mtl  venus.mtl
